-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8
-
Component/s: hotspot
-
b17
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8007199 | 8 | Coleen Phillimore | P2 | Closed | Fixed | b75 |
This bug is in the perm gen removal project.
Backtrace builders use method data that can change during class redefinition.
Either the method behind that data must be found and kept alive or the
method must be updated to the redefined class.
Backtrace builders use method data that can change during class redefinition.
Either the method behind that data must be found and kept alive or the
method must be updated to the redefined class.
- backported by
-
JDK-8007199 NPG: Fix bactrace builder for class redefinition
-
- Closed
-
- duplicates
-
JDK-8003122 Nightly test bigapps/Kitchensink/stability fails with EXCEPTION_ACCESS_VIOLATION
-
- Closed
-
- relates to
-
JDK-8067662 "java.lang.NullPointerException: Method name is null" from StackTraceElement.<init>
-
- Resolved
-
-
JDK-8006506 Add test for redefining methods in backtraces to java/lang/instrument tests
-
- Closed
-